# finbert-sentiment

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-group-split-by-sentence-hash.md  0002-macro-f1-not-accuracy.md  0003-onnx-or-lexicon-serve-no-torch.md  0004-no-walkforward-category-error.md  0005-no-fabricated-metrics.md
src/finbert_sentiment/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  plots.py  service.py
src/finbert_sentiment/artifacts/: README.md  metrics.json
src/finbert_sentiment/baselines/: __init__.py  class_prior.py  lexicon.py
src/finbert_sentiment/data/: __init__.py  dedup.py  load.py  split.py
src/finbert_sentiment/evaluation/: __init__.py  mcnemar.py  metrics.py  verdict.py
src/finbert_sentiment/inference/: __init__.py  onnx_session.py  predictor.py
src/finbert_sentiment/model/: __init__.py  export.py  train.py
tests/: conftest.py
tests/integration/: test_import_purity.py  test_pipeline.py
tests/parity/: test_metrics_parity.py
tests/property/: test_invariants.py  test_split_properties.py
tests/regression/: test_golden.py
tests/unit/: test_baselines.py  test_data_dedup.py  test_data_load.py  test_data_split.py  test_evaluation.py  test_inference.py  test_infra.py  test_model.py  test_plots_and_cli.py  test_service.py
