[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finbert-sentiment"
version = "0.1.0"
description = "A from-scratch DistilBERT fine-tune for 3-way financial-sentence sentiment (negative/neutral/positive) on the Financial PhraseBank, served via ONNX, benchmarked honestly against class-prior and lexicon baselines with macro-F1 and bootstrap CIs. Sentiment is a text label, not a tradable signal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "finbert",
    "financial-sentiment",
    "nlp",
    "transformers",
    "distilbert",
    "text-classification",
    "financial-phrasebank",
    "onnx",
    "macro-f1",
    "honest-baselines",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/finbert-sentiment"
Changelog = "https://github.com/FatihHekim0glu/finbert-sentiment/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Data loading (Financial PhraseBank), dedup/split, and the honest-metrics layer.
data = [
    "datasets>=2.18",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=15.0",
]
# Lean inference path = the container: onnxruntime + tokenizers ONLY.
# NEVER torch / transformers here.
serve = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]
# Offline training/export path (heavy; never imported in the serve container).
train = [
    "torch>=2.2",
    "transformers>=4.39",
    "evaluate>=0.4",
    "onnx>=1.16",
]
# Plotly figure builders (figures serialize to {data, layout} JSON).
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Developer + parity-oracle + lint/type/test stack. Includes the lean serve stack
# (onnxruntime + tokenizers) so the serve / predictor tests run in CI WITHOUT the
# heavy [train] (torch) extra.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "typer>=0.12",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]

[project.scripts]
finbert-sentiment = "finbert_sentiment.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finbert_sentiment"]
# Ship the committed serve artifacts inside the wheel (ONNX graph + tokenizer.json
# when the transformer was trained; the lexicon needs no artifact).
artifacts = [
    "src/finbert_sentiment/artifacts/*.onnx",
    "src/finbert_sentiment/artifacts/tokenizer.json",
    "src/finbert_sentiment/artifacts/metrics.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/finbert_sentiment",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (X, y, N) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (sample count N) are intentional.
extend-ignore-names = ["N"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/finbert_sentiment"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "sklearn.*",
    "scipy.*",
    "torch.*",
    "transformers.*",
    "evaluate.*",
    "onnx.*",
    "onnxruntime.*",
    "tokenizers.*",
    "plotly.*",
    "typer.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference (sklearn / torch-vs-ONNX)",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (the offline load->dedup->split->eval guard)",
    "slow: long-running tests",
    "train: tests requiring the heavy [train] extra (torch/transformers)",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["finbert_sentiment"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
